--- a/templates/prosang.html
+++ b/templates/prosang.html
@@ -28,7 +28,7 @@ ProSang | Robotics Club MNNIT
 
 <section id="services" class="services section-bg ">
     <div class="container" data-aos="fade-up">
-        <h4 class="p-3" style="color: black;">Every year ProSang witnesses:</h4>
+        <h4 class="p-3">Every year ProSang witnesses:</h4>
         <div class="row">
             <div class="col-md-6 mt-4 mt-md-0">
                 <div class="icon-box wow pulse" data-wow-delay="0.1">
@@ -87,7 +87,7 @@ ProSang | Robotics Club MNNIT
 
                 <!-- Accordion item 1 -->
                 <div class="card">
-                    <div id="headingOne" class="card-header bg-white shadow-sm border-0">
+                    <div id="headingOne" class="card-header shadow-sm border-0">
                         <h5 class="mb-0 font-weight-bold"><a href="#" data-toggle="collapse" data-target="#collapseOne"
                                 aria-expanded="false" aria-controls="collapseOne"
                                 class="d-block position-relative collapsible-link py-2">ProSang 2020</a></h5>
@@ -169,7 +169,7 @@ ProSang | Robotics Club MNNIT
 
                 <!-- Accordion item 2 -->
                 <div class="card">
-                    <div id="headingTwo" class="card-header bg-white shadow-sm border-0">
+                    <div id="headingTwo" class="card-header shadow-sm border-0">
                         <h5 class="mb-0 font-weight-bold"><a href="#" data-toggle="collapse" data-target="#collapseTwo"
                                 aria-expanded="false" aria-controls="collapseTwo"
                                 class="d-block position-relative collapsed collapsible-link py-2">ProSang 2019</a></h5>
