--- a/static/css/achievement.css
+++ b/static/css/achievement.css
@@ -1,10 +1,14 @@
-.achievement .d-flex h2{
-    color: #333;
-    font-weight: 600;
-    font-family: "Poppins", sans-serif;
+.achievement .d-flex h2 {
+  color: #333;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
   letter-spacing: 2px;
   line-height: 180%;
-  border-bottom:#e03a3c 5px solid;
+  border-bottom: #e03a3c 5px solid;
+}
+
+.dark .achievement .d-flex h2 {
+  color: white;
 }
 
 /*--------------------------------------------------------------
@@ -32,11 +36,11 @@ section {
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.25);
 }
 
-.services .icon-box:hover{
+.services .icon-box:hover {
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.5);
 }
 
-.services .icon-box:hover h4{
+.services .icon-box:hover h4 {
   /* background: #2b2b2b; */
   color: #db1515;
 }
@@ -46,10 +50,10 @@ section {
   font-weight: 650;
   margin-bottom: 10px;
   font-size: 18px;
-  color: #16324f;
+  color: #3975b5;
   transition: 0.3s;
   text-align: center;
-  font-family: "Poppins",sans-serif;
+  font-family: "Poppins", sans-serif;
   line-height: 1.2em;
   letter-spacing: 0.05em;
   word-spacing: 0.2em;
@@ -64,19 +68,19 @@ section {
   font-weight: 600;
 }
 
-.services .icon-box p>a {
-    color: #EC3134;
-    /* font-weight: 600; */
+.services .icon-box p > a {
+  color: #ec3134;
+  /* font-weight: 600; */
 }
 
-.services .bg-dark{
-    font-family: "Montserrat",sans-serif;
-    font-weight: 600;
-    font-size: 1.2em;
+.services .bg-dark {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 1.2em;
 }
 
-.achievement h4{
-    color: #16324f;
+.achievement h4 {
+  color: #3975b5;
   font-weight: 800;
   font-family: "Montserrat", sans-serif;
   font-size: 1.4em;
