--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -1,128 +1,130 @@
- #blog .d-flex h2{
-    color: #333;
-    font-weight: 600;
-    font-family: "Poppins", sans-serif;
-    word-spacing: 10px;
-    letter-spacing: 2px;
-    line-height: 180%;
-    border-bottom:#e03a3c 5px solid;
-    margin-bottom: 0%;
-  }
-
-.card {
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-      border: none;
-      margin-bottom: 50px;
-      overflow: hidden;
-      max-height: 520px;
+#blog .d-flex h2 {
+  color: #333;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  word-spacing: 10px;
+  letter-spacing: 2px;
+  line-height: 180%;
+  border-bottom: #e03a3c 5px solid;
+  margin-bottom: 0%;
 }
 
-.card-image{
+#blog .d-flex h2 {
+  color: white;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border: none;
+  margin-bottom: 50px;
+  overflow: hidden;
+  max-height: 520px;
+}
+
+.card-image {
   transition: transform 0.3s;
   overflow: hidden;
   z-index: 2;
-      /* width: 350px;*/
-      height: 315px;
-}
-  
-    .card-body{
-      transition: height 0.4s;
-      overflow: hidden;
-      z-index: 2;
-      /* transition: all ease-in-out 1s; */
-    }
-
-    .card img{
-      width: 100%;
-      height: 100%;
-    }
-    
-    .card-title{
-      color: #e03a3c;
-      font-weight: bold;
-      font-family: "Roboto", sans-serif;
-      word-spacing: 10px;
-      letter-spacing: 2px;
-      line-height: 180%;
-    }
-
-    .card:hover{
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6);
-    }
-    
-    .card:hover .card-body{
-      transform: translateY(-150%);
-      /* height: 100%; */
-    }
-  
-    .card:hover .card-title{
-      border-bottom: 2px solid #e03a3c;
-    } 
-    
-    .card:hover .card-image{
-      transform: translateY(-320px);
-    } 
-
-    .card:hover .card-text{
-      display: block;
-    }
-    
-     #blog a, a:hover{
-      text-decoration: none;
-      color: #212529;
-    } 
-     
-    #blog .badge{
-      color: white;
-    }
-     
-    .card-text{
-      display: none; 
-    overflow: hidden;
-    transition: display 0.5s;
-    transition-timing-function: ease-in-out;
-    transition-delay: 1s;
-      font-size: 15px;
-    }
-
-  
-    
-    .text-muted i {
-      margin: 0 10px;
-    }
-
-    .blog-image img{
-      max-width: 50%;
-      height: 100%;
-    }
-    
-    .blog-image iframe{
-      overflow: hidden;
-  }
-  
-#blog-detail .d-flex h3{
-    color: #333;
-    font-weight: 600;
-    font-family: "Poppins", sans-serif;
-    word-spacing: 10px;
-    letter-spacing: 2px;
-    line-height: 180%;
-    border-bottom:#e03a3c 5px solid;
-    margin-bottom: 0%;
-    }
-
-.end{
-    text-align: center;
+  /* width: 350px;*/
+  height: 315px;
 }
 
+.card-body {
+  transition: height 0.4s;
+  overflow: hidden;
+  z-index: 2;
+  /* transition: all ease-in-out 1s; */
+}
 
-.dot{
-    height: 15px;
-    width: 15px;
-    background-color:#e03a3c;
-    border-radius: 50%;
-    display: inline-block;
-    margin: 5px
+.card img {
+  width: 100%;
+  height: 100%;
+}
+
+.card-title {
+  color: #e03a3c;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+  word-spacing: 10px;
+  letter-spacing: 2px;
+  line-height: 180%;
+}
+
+.card:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6);
+}
+
+.card:hover .card-body {
+  transform: translateY(-150%);
+  /* height: 100%; */
+}
+
+.card:hover .card-title {
+  border-bottom: 2px solid #e03a3c;
+}
+
+.card:hover .card-image {
+  transform: translateY(-320px);
+}
+
+.card:hover .card-text {
+  display: block;
+}
+
+#blog a,
+a:hover {
+  text-decoration: none;
+  color: #212529;
+}
+
+#blog .badge {
+  color: white;
+}
+
+.card-text {
+  display: none;
+  overflow: hidden;
+  transition: display 0.5s;
+  transition-timing-function: ease-in-out;
+  transition-delay: 1s;
+  font-size: 15px;
+}
+
+.text-muted i {
+  margin: 0 10px;
+}
+
+.blog-image img {
+  max-width: 50%;
+  height: 100%;
+}
+
+.blog-image iframe {
+  overflow: hidden;
+}
+
+#blog-detail .d-flex h3 {
+  color: #333;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  word-spacing: 10px;
+  letter-spacing: 2px;
+  line-height: 180%;
+  border-bottom: #e03a3c 5px solid;
+  margin-bottom: 0%;
+}
+
+.end {
+  text-align: center;
+}
+
+.dot {
+  height: 15px;
+  width: 15px;
+  background-color: #e03a3c;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 5px;
 }
 
 /* #intro {
@@ -139,23 +141,23 @@
   display: block;
 } */
 
-.blog-form .container{
-  border: 1px solid  #e9ecef;
+.blog-form .container {
+  border: 1px solid #e9ecef;
   border-radius: 20px;
 }
 
-#blog-form .d-flex h2{
+#blog-form .d-flex h2 {
   color: #333;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   word-spacing: 10px;
   letter-spacing: 2px;
   line-height: 180%;
-  border-bottom:#e03a3c 5px solid;
+  border-bottom: #e03a3c 5px solid;
   margin-bottom: 0%;
-  }
+}
 
-#blog-form .form-group label{
+#blog-form .form-group label {
   margin-top: 15px;
   color: #e03a3c;
   font-style: italic;
@@ -165,16 +167,16 @@
   font-weight: 500;
 }
 
-.blog-form .form-control{
-  border-radius:1rem;
+.blog-form .form-control {
+  border-radius: 1rem;
 }
 
-.blog-form form{
+.blog-form form {
   padding-left: 2%;
   padding-right: 2%;
 }
 
-.blog-form .text-muted{
+.blog-form .text-muted {
   font-style: italic;
   font-size: 15px;
   margin-top: 0;
@@ -182,49 +184,48 @@
 }
 
 .blogbtn {
-    height: 45px;
-    margin: 3px;
-    border: none;
-    border-radius: 10px;
-    /* padding: 2%; */
-    background: #e03a3c;
-    font-weight: 600;
-    color: #fff;
-    font-style: italic;
-    cursor: pointer;
-    align-items: center; 
+  height: 45px;
+  margin: 3px;
+  border: none;
+  border-radius: 10px;
+  /* padding: 2%; */
+  background: #e03a3c;
+  font-weight: 600;
+  color: #fff;
+  font-style: italic;
+  cursor: pointer;
+  align-items: center;
 }
 
-#postbtn{
+#postbtn {
   width: auto;
 }
 
-#writebtn{
+#writebtn {
   width: auto;
 }
 
-#updatebtn{
+#updatebtn {
   width: auto;
   display: inline-block;
   margin: 3px;
   background: grey;
 }
 
-#deletebtn{
+#deletebtn {
   width: auto;
   display: inline-block;
   margin: 3px;
 }
 
-.blogbtn:hover{
-  background: crimson !important; 
+.blogbtn:hover {
+  background: crimson !important;
 }
 
 /* .blog-form .btn{
   text-align: center;
 } */
 
-.vid{
+.vid {
   padding: 20px;
 }
- 
