--- a/static/css/blogs.css
+++ b/static/css/blogs.css
@@ -1,12 +1,16 @@
-#blog .d-flex h2{
+#blog .d-flex h2 {
   color: #333;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   word-spacing: 10px;
   letter-spacing: 2px;
   line-height: 180%;
-  border-bottom:#e03a3c 5px solid;
+  border-bottom: #e03a3c 5px solid;
   margin-bottom: 0%;
+}
+
+.dark #blog .d-flex h2 {
+  color: white;
 }
 
 .card {
@@ -14,7 +18,7 @@
   height: 520px;
   background-color: #fff;
   background: linear-gradient(#f8f8f8, #fff);
-  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.4);
+  box-shadow: 0 8px 16px -8px rgba(0, 0, 0, 0.4);
   border-radius: 6px;
   overflow: hidden;
   position: relative;
@@ -24,7 +28,7 @@
   max-height: 100vh;
 }
 
-.card-details h4{
+.card-details h4 {
   color: #e03a3c;
   /* font-weight: bold; */
   margin-left: 2px;
@@ -32,33 +36,33 @@
   font-family: "Poppins", sans-serif;
   word-spacing: 2px;
   letter-spacing: 1px;
-  
+
   /* line-height: 180%; */
 }
 
-.card:hover{
+.card:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6);
 }
 
-.card:hover .hover-part h2{
+.card:hover .hover-part h2 {
   border-bottom: 1px solid #e03a3c;
-} 
+}
 
-
- a, a:hover{
+a,
+a:hover {
   /* text-decoration: none; */
   color: #e03a3c;
-} 
+}
 
-.card-image{
+.card-image {
   transition: transform 0.3s;
   overflow: hidden;
   z-index: 2;
-      /* width: 350px;*/
-      height: 280px;
+  /* width: 350px;*/
+  height: 280px;
 }
 
-.card img{
+.card img {
   width: 100%;
   height: 92%;
 }
@@ -72,24 +76,23 @@
   height: 280px;
   width: 100%;
   /* background: linear-gradient(#dE685E, #EE786E); */
-  background-color: #F7F7F7;
+  background-color: #f7f7f7;
   transition: height 0.4s;
   overflow: hidden;
   z-index: 2;
 }
-
 
 .card:hover .hover-part {
   height: 100%;
   border-radius: 0 5px 5px 0;
 }
 
- .card .hover-part .card-image {
+.card .hover-part .card-image {
   /* height: 315px; */
   width: 100%;
   position: relative;
   float: left;
-} 
+}
 
 .card .hover-part .card-image::after {
   content: "";
@@ -98,7 +101,7 @@
   top: 10%;
   right: -2px;
   height: 80%;
-  border-left: 2px solid rgba(0,0,0,0.025);
+  border-left: 2px solid rgba(0, 0, 0, 0.025);
 }
 
 .card .hover-part .card-image img {
@@ -110,11 +113,11 @@
   text-transform: uppercase;
   /* font-size: 0.75em;
   font-weight: bold; */
-  /* background: rgba(0,0,0,0.15);
+/* background: rgba(0,0,0,0.15);
   padding: 0.125rem 0.75rem;
   border-radius: 100px; */
-  /* white-space: nowrap; */
-/* } */ 
+/* white-space: nowrap; */
+/* } */
 
 .card .hover-part .card-text {
   height: 240px;
@@ -127,7 +130,7 @@
   /* padding: 10px; */
 }
 
-.card-desc{
+.card-desc {
   padding: 10px;
 }
 
@@ -144,7 +147,7 @@
   /* line-height: 180%; */
 }
 
-.card .card-details{
+.card .card-details {
   display: inline-block;
 }
 
@@ -153,20 +156,18 @@
   /* color: #fff; */
   font-size: 0.9rem;
   align-items: center;
-
 }
 
 .card .card-details .detail span + span {
   float: right;
 }
 
-
 .card .card-details {
-  height:  240px;
+  height: 240px;
   width: 100%;
   position: absolute;
   bottom: 0;
-  left:  0;
+  left: 0;
   z-index: 1;
   box-sizing: border-box;
   /* padding: 1rem; */
@@ -181,7 +182,7 @@
   font-size: 0.7em;
 } */
 
-.card .card-desc p{
+.card .card-desc p {
   color: #000;
 }
 
@@ -190,55 +191,54 @@
   bottom: 1rem;
   right: 1rem;
   font-size: 0.9em;
-  color: #7F8389;
+  color: #7f8389;
 }
 
-#blog a, a:hover{
+#blog a,
+a:hover {
   text-decoration: none;
-  color: #6C757D;
-} 
+  color: #6c757d;
+}
 
 .text-muted i {
   margin: 0 10px;
 }
 
-#blog .badge{
+#blog .badge {
   color: white;
 }
- 
 
-.blog-image img{
+.blog-image img {
   max-width: 100%;
   height: auto;
 }
 
-.blog-image iframe{
+.blog-image iframe {
   overflow: hidden;
 }
 
-#blog-detail .d-flex h3{
-color: #333;
-font-weight: 600;
-font-family: "Poppins", sans-serif;
-word-spacing: 10px;
-letter-spacing: 2px;
-line-height: 180%;
-border-bottom:#e03a3c 3px solid;
-margin-bottom: 3%;
+#blog-detail .d-flex h3 {
+  color: #939393;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  word-spacing: 10px;
+  letter-spacing: 2px;
+  line-height: 180%;
+  border-bottom: #e03a3c 3px solid;
+  margin-bottom: 3%;
 }
 
-.end{
-text-align: center;
+.end {
+  text-align: center;
 }
 
-
-.dot{
-height: 15px;
-width: 15px;
-background-color:#e03a3c;
-border-radius: 50%;
-display: inline-block;
-margin: 5px
+.dot {
+  height: 15px;
+  width: 15px;
+  background-color: #e03a3c;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 5px;
 }
 
 /* #intro {
@@ -255,98 +255,98 @@ display: none;
 display: block;
 } */
 
-.blog-form .container{
-border: 1px solid  #e9ecef;
-border-radius: 20px;
+.blog-form .container {
+  border: 1px solid #e9ecef;
+  border-radius: 20px;
 }
 
-#blog-form .d-flex h2{
-color: #333;
-font-weight: 600;
-font-family: "Poppins", sans-serif;
-word-spacing: 10px;
-letter-spacing: 2px;
-line-height: 180%;
-border-bottom:#e03a3c 5px solid;
-margin-bottom: 0%;
+#blog-form .d-flex h2 {
+  color: #939393;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  word-spacing: 10px;
+  letter-spacing: 2px;
+  line-height: 180%;
+  border-bottom: #e03a3c 5px solid;
+  margin-bottom: 0%;
 }
 
-#blog-form label{
-margin-top: 15px;
-color: #e03a3c;
-font-style: italic;
-word-spacing: 10px;
-letter-spacing: 2px;
-font-size: 20px;
+#blog-form label {
+  margin-top: 15px;
+  color: #e03a3c;
+  font-style: italic;
+  word-spacing: 10px;
+  letter-spacing: 2px;
+  font-size: 20px;
   font-weight: 500;
 }
 
-.blog-form .form-control{
-border-radius:1rem;
+.blog-form .form-control {
+  border-radius: 1rem;
 }
 
-.blog-form form{
-padding-left: 2%;
-padding-right: 2%;
+.blog-form form {
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
-.blog-form .text-muted{
-font-style: italic;
-font-size: 15px;
-margin-top: 0;
-display: inline;
+.blog-form .text-muted {
+  font-style: italic;
+  font-size: 15px;
+  margin-top: 0;
+  display: inline;
 }
 
 .blogbtn {
-height: 45px;
-margin: 3px;
-border: none;
-border-radius: 23px;
-/* padding: 2%; */
-background: #e03a3c;
-font-weight: 600;
-color: #fff;
-font-style: italic;
-cursor: pointer;
-align-items: center; 
+  height: 45px;
+  margin: 3px;
+  border: none;
+  border-radius: 23px;
+  /* padding: 2%; */
+  background: #e03a3c;
+  font-weight: 600;
+  color: #fff;
+  font-style: italic;
+  cursor: pointer;
+  align-items: center;
 }
 
-#postbtn{
-width: 30%;
+#postbtn {
+  width: 30%;
 }
 
-#writebtn{
-width: auto;
+#writebtn {
+  width: auto;
 }
 
-#updatebtn{
-width: auto;
-display: inline-block;
-margin: 3px;
-background: grey;
+#updatebtn {
+  width: auto;
+  display: inline-block;
+  margin: 3px;
+  background: grey;
 }
 
-#deletebtn{
-width: auto;
-display: inline-block;
-margin: 3px;
+#deletebtn {
+  width: auto;
+  display: inline-block;
+  margin: 3px;
 }
 
-.blogbtn:hover{
-background: crimson !important; 
+.blogbtn:hover {
+  background: crimson !important;
 }
 
 /* .blog-form .btn{
 text-align: center;
 } */
 
-.vid{
-padding: 20px;
+.vid {
+  padding: 20px;
 }
-.content{
+.content {
   padding-left: 0px;
 }
-.content img{
+.content img {
   max-width: 100%;
   height: auto;
 }
