--- a/static/css/collaborate.css
+++ b/static/css/collaborate.css
@@ -1,4 +1,4 @@
-#about .d-flex h2{
+#about .d-flex h2 {
   text-align: center;
   color: #333;
   font-weight: 600;
@@ -6,7 +6,11 @@
   word-spacing: 10px;
   letter-spacing: 2px;
   line-height: 180%;
-  border-bottom:#e03a3c 5px solid;
+  border-bottom: #e03a3c 5px solid;
+}
+
+.dark #about .d-flex h2 {
+  color: white;
 }
 
 #about #section-title {
@@ -19,17 +23,13 @@
   margin-bottom: 0;
 }
 
-#about footer{
-  background-color: #fff !important;
-}
-
-.collaborate{
-  border: 2px solid rgb(204, 67, 67); 
-  padding: 20px; 
+.collaborate {
+  border: 2px solid rgb(204, 67, 67);
+  padding: 20px;
   border-radius: 7px;
 }
 
-.collaborate .title{
+.collaborate .title {
   color: #212529;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
@@ -39,8 +39,12 @@
   line-height: 180%;
   text-transform: capitalize; */
 }
-  
-.collaborate .title-u{
+
+.dark .collaborate .title {
+  color: whitesmoke;
+}
+
+.collaborate .title-u {
   background: #e03a3c;
   width: 50px;
   height: 3px;
@@ -48,39 +52,32 @@
   left: calc(50% - 25px);
   display: block;
 }
-  
-.collaborate  p {
+
+.collaborate p {
   margin-top: 60px;
-    text-align: justify;
+  text-align: justify;
 }
 
-.lead{
-    text-align: center !important;
+.lead {
+  text-align: center !important;
 }
 
 .about {
   overflow: hidden;
 }
 
-.collaborate a{
+.collaborate a {
   color: #e03a3c !important;
 }
 
-@media(max-width: 990px) {
-#offer {
-  flex-direction: column-reverse;
+@media (max-width: 990px) {
+  #offer {
+    flex-direction: column-reverse;
+  }
+  #learn {
+    flex-direction: column-reverse;
+  }
 }
-#learn {
-  flex-direction: column-reverse;
-}
-}
-
-
-  
-
- 
-
-
 
 /* 
 #about #about-us{
@@ -92,7 +89,6 @@
     background-color: #CCCCCC;;
     
 } */
-
 
 /* .about .row h2 {
     font-weight: 700;
