--- a/static/css/components.css
+++ b/static/css/components.css
@@ -4,211 +4,207 @@ starts
 */
 
 /* Component Heading */
-#components .d-flex h2{
-    color: #333;
-    font-weight: 600;
-    font-family: "Poppins", sans-serif;
-    word-spacing: 10px;
-    letter-spacing: 2px;
-    line-height: 180%;
-    border-bottom:#e03a3c 5px solid;
-  }
-  
-
-  /* Setting container for tabs+components */
-  #features {
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-  }
-
-
-  /* Color of the tabs */
-  #features .container .nav .nav-item a{
-    color:#e76668;
-  }
-
-  /* Active tab */
-  #features .container .nav .nav-item .active{
-    color:#e03a3c;
-    font-weight: 500;
-  }
-  
-  /* Block of single component */
-  #features .feature-block {
-    background: #fff none repeat scroll 0 0;
-    padding: 20px 20px;
-    margin-bottom: 30px;
-    transition: all 0.5s ease-in-out 0s;
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.25);
-  }
-
-
-  /* Component Image */
-
-  #features .feature-block img{
-    max-width: 100%;
-    height: auto;
-    object-fit: cover;
-  }
-  
-
-  #features .feature-block:hover {
-    box-shadow: 0 0 35px rgba(0, 0, 0, 0.4);
-    transition: all 0.5s ease-in-out 0s;
-  }
-  
-
-  /* Name of the Component */
-  #features .feature-block h4 {
-    margin-bottom: 10px;
-    margin-top: 25px;
-    font-size: 1.25rem;
-    font-family: "Roboto", sans-serif;
-    font-weight: bold;
-    color: #de1212;
-    padding-top: 10px;
-  }
-  
-  /* Description of Component */
-  #features .feature-block p {
-    margin-bottom: 8px;
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    color: #333;
-  }
-
-  /*
-  Components
-  Ends
-  */
-
-  /*component form*/
-
-  .components-form .container{
-    border: 1px solid  #e9ecef;
-    border-radius: 20px;
-  }
-  
-  #components-form .d-flex h2{
-    color: #333;
-    font-weight: 600;
-    font-family: "Poppins", sans-serif;
-    word-spacing: 10px;
-    letter-spacing: 2px;
-    line-height: 180%;
-    border-bottom:#e03a3c 5px solid;
-    margin-bottom: 0%;
-    }
-  
-  #components-form label{
-    margin-top: 15px;
-    color: #e03a3c;
-    font-style: italic;
-    word-spacing: 10px;
-    letter-spacing: 2px;
-  }
-  
-  .components-form .form-control{
-    border-radius:1rem;
-  }
-  
-  .components-form form{
-    padding-left: 2%;
-    padding-right: 2%;
-  }
-  
-  .components-form .text-muted{
-    font-style: italic;
-    font-size: 15px;
-    margin-top: 0;
-    display: inline;
-  }
-
-  .info-box .issuer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-   .componentsbtn {
-     width: auto;
-     height: 45px;
-    margin: 10px;
-    border: none;
-    border-radius: 10px;
-    /* padding: 2%; */
-    background: #e03a3c;
-    font-weight: 600;
-    color: #fff;
-    font-style: italic;
-    cursor: pointer;
-  }
-  
-  .approvebtn{
-    width: 30%;
-    background:green;
-  }
-  
-  #deletebtn{
-    width: 30%;
-  }
-
-  #postbtn{
-    width:20%;
-  }
-
- 
-  
-  .componentsbtn:hover{
-    background: crimson !important; 
-  }
-  
-  #id_detail{
-    height: 80px;
-  }
-
-/*issue details*/
-#issue-details .carousel-img {
-  width: 150px;
-  height: 150px;
-  }
-
-#issue-details .d-flex h2{
+#components .d-flex h2 {
   color: #333;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   word-spacing: 10px;
   letter-spacing: 2px;
   line-height: 180%;
-  border-bottom:#e03a3c 2px solid;
+  border-bottom: #e03a3c 5px solid;
+}
+
+.dark #components .d-flex h2 {
+  color: white;
+}
+
+/* Setting container for tabs+components */
+#features {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+}
+
+/* Color of the tabs */
+#features .container .nav .nav-item a {
+  color: #e76668;
+}
+
+/* Active tab */
+#features .container .nav .nav-item .active {
+  color: #e03a3c;
+  font-weight: 500;
+}
+
+/* Block of single component */
+#features .feature-block {
+  background: #fff none repeat scroll 0 0;
+  padding: 20px 20px;
+  margin-bottom: 30px;
+  transition: all 0.5s ease-in-out 0s;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.25);
+}
+
+/* Component Image */
+
+#features .feature-block img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+#features .feature-block:hover {
+  box-shadow: 0 0 35px rgba(0, 0, 0, 0.4);
+  transition: all 0.5s ease-in-out 0s;
+}
+
+/* Name of the Component */
+#features .feature-block h4 {
+  margin-bottom: 10px;
+  margin-top: 25px;
+  font-size: 1.25rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  color: #de1212;
+  padding-top: 10px;
+}
+
+/* Description of Component */
+#features .feature-block p {
+  margin-bottom: 8px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  color: #939393;
+}
+
+/*
+  Components
+  Ends
+  */
+
+/*component form*/
+
+.components-form .container {
+  border: 1px solid #e9ecef;
+  border-radius: 20px;
+}
+
+#components-form .d-flex h2 {
+  color: #939393;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  word-spacing: 10px;
+  letter-spacing: 2px;
+  line-height: 180%;
+  border-bottom: #e03a3c 5px solid;
+  margin-bottom: 0%;
+}
+
+#components-form label {
+  margin-top: 15px;
+  color: #e03a3c;
+  font-style: italic;
+  word-spacing: 10px;
+  letter-spacing: 2px;
+}
+
+.components-form .form-control {
+  border-radius: 1rem;
+}
+
+.components-form form {
+  padding-left: 2%;
+  padding-right: 2%;
+}
+
+.components-form .text-muted {
+  font-style: italic;
+  font-size: 15px;
+  margin-top: 0;
+  display: inline;
+}
+
+.info-box .issuer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.componentsbtn {
+  width: auto;
+  height: 45px;
+  margin: 10px;
+  border: none;
+  border-radius: 10px;
+  /* padding: 2%; */
+  background: #e03a3c;
+  font-weight: 600;
+  color: #fff;
+  font-style: italic;
+  cursor: pointer;
+}
+
+.approvebtn {
+  width: 30%;
+  background: green;
+}
+
+#deletebtn {
+  width: 30%;
+}
+
+#postbtn {
+  width: 20%;
+}
+
+.componentsbtn:hover {
+  background: crimson !important;
+}
+
+#id_detail {
+  height: 80px;
+}
+
+/*issue details*/
+#issue-details .carousel-img {
+  width: 150px;
+  height: 150px;
+}
+
+#issue-details .d-flex h2 {
+  color: #333;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  word-spacing: 10px;
+  letter-spacing: 2px;
+  line-height: 180%;
+  border-bottom: #e03a3c 2px solid;
 }
 
 #issue-details .message-box {
-	position: relative;
-	padding: 60px;
+  position: relative;
+  padding: 60px;
   margin-top: 10px;
   text-align: left;
   border: 1px solid #e9ecef;
   border-radius: 20px;
 }
 
-#issue-details .issuer{
+#issue-details .issuer {
   color: #e03a3c !important;
 }
 
-#issue-details .issuer a{
+#issue-details .issuer a {
   color: #e03a3c !important;
 }
 
-#issue-details .info-box .name{
+#issue-details .info-box .name {
   color: #16324f;
   border-bottom: 1px #e03a3c;
 }
 
-
 #issue-details .message-box h3 {
-	margin-top: 15px;
+  margin-top: 15px;
   margin-bottom: 25px;
   color: #e03a3c;
   font-size: 25px;
@@ -216,12 +212,12 @@ starts
   letter-spacing: 2px;
 }
 
-#issue-details .message-box h4 b{
+#issue-details .message-box h4 b {
   color: #e03a3c;
 }
 
 #issue-details .message-box h4 {
-	margin-top: 15px;
+  margin-top: 15px;
   margin-bottom: 25px;
   font-size: 15px;
   font-family: "Roboto", sans-serif;
@@ -234,19 +230,19 @@ starts
 }
 
 #issue-details .message-box .row:after {
-	content: '';
-	position: absolute;
-	left: 20px;
-	right: 20px;
-	bottom: 0;
-	top: 120px;
-	
-	/* border: 1px solid #e9ecef; */
-	border-radius: 20px;
+  content: "";
+  position: absolute;
+  left: 20px;
+  right: 20px;
+  bottom: 0;
+  top: 120px;
+
+  /* border: 1px solid #e9ecef; */
+  border-radius: 20px;
   z-index: -1;
 }
 
-#issue-details .info-box{
+#issue-details .info-box {
   border: 1px solid #e9ecef;
   border-radius: 20px;
   text-align: center;
@@ -261,25 +257,25 @@ starts
 }
 .red-border .form-control:focus {
   border: 1px solid #e03a3c;
-  box-shadow: 0 0 0 0.3rem rgba(220, 20, 60, .10);
+  box-shadow: 0 0 0 0.3rem rgba(220, 20, 60, 0.1);
 }
 
-#components ul{
+#components ul {
   padding: 0;
   margin: 0;
 }
 
-.tab-text{
+.tab-text {
   padding: 10px 9px;
 }
-.comp-img{
+.comp-img {
   width: 180px;
   height: 108px;
   /* max-width: 100%; */
   /* height: auto; */
 }
 
-.test{
+.test {
   padding-top: 4px;
   padding-bottom: 4px;
 }
