--- a/static/css/homepage_testimonial.css
+++ b/static/css/homepage_testimonial.css
@@ -1,122 +1,135 @@
-.testimonials .d-flex h2{
-    color: #333;
-    font-weight: 600;
-    font-family: "Poppins", sans-serif;
-    word-spacing: 10px;
-    letter-spacing: 2px;
-    line-height: 180%;
-    border-bottom:#e03a3c 5px solid
-  }
-  
-  /* -------------------------------------------------------------------------------------------------- */
-  
-
-  .owl-theme .owl-controls{
-      margin-top: 10px;
-  }
-  .owl-theme .owl-controls .owl-page span{
-      background: #5e5f5f;
-      opacity: 1;
-      transition: all 0.4s ease 0s;
-  }
-  .owl-theme .owl-controls .owl-page.active span,
-  .owl-theme .owl-controls.clickable .owl-page:hover span{
-      background: #ed5360;
-  }
-  .owl-theme .owl-controls .owl-page.active span{
-      width: 22px;
-      height: 12px;
-  }
-  
-    .owl-pagination{
-        padding-bottom: 25px;
-    }
-  
-  /*testimonials section*/
-
-.testimonial{
-    margin: 0 20px 40px;
-    /* max-height: 50vh; */
-}
-.testimonial .testimonial-content{
-    padding: 35px 25px 35px 50px;
-    margin-bottom: 35px;
-    background: #F8f8f8;
-    border: 5px solid #f0f0f0;
-    position: relative;
-}
-.testimonial .testimonial-content:after{
-    content: "";
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    background: #F7F7F7;
-    border-bottom: 5px solid #f0f0f0;
-    border-right: 5px solid #f0f0f0;
-    position: absolute;
-    bottom: -20px;
-    left: 30px;
-    transform: rotate(45deg);
-}
-.testimonial-content .testimonial-icon{
-    width: 50px;
-    height: 45px;
-    background: #ff4242;
-    text-align: center;
-    font-size: 22px;
-    color: #fff;
-    line-height: 42px;
-    position: absolute;
-    top: 37px;
-    left: -19px;
-}
-.testimonial-content .testimonial-icon:before{
-    content: "";
-    border-bottom: 16px solid #e41212;
-    border-left: 18px solid transparent;
-    position: absolute;
-    top: -16px;
-    left: 1px;
-}
-.testimonial .description{
-    max-height: 160px;
-    overflow-y: scroll;
-    font-size: 16px;
-    font-style: italic;
-    color: #8a8a8a;
-    line-height: 23px;
-    margin: 0;
+.testimonials .d-flex h2 {
+  color: #333;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  word-spacing: 10px;
+  letter-spacing: 2px;
+  line-height: 180%;
+  border-bottom: #e03a3c 5px solid;
 }
 
-.testimonial .testimonial-details .carousel-img{
+.dark .testimonials .d-flex h2 {
+  color: white;
+}
+
+/* -------------------------------------------------------------------------------------------------- */
+
+.owl-theme .owl-controls {
+  margin-top: 10px;
+}
+.owl-theme .owl-controls .owl-page span {
+  background: #5e5f5f;
+  opacity: 1;
+  transition: all 0.4s ease 0s;
+}
+.owl-theme .owl-controls .owl-page.active span,
+.owl-theme .owl-controls.clickable .owl-page:hover span {
+  background: #ed5360;
+}
+.owl-theme .owl-controls .owl-page.active span {
+  width: 22px;
+  height: 12px;
+}
+
+.owl-pagination {
+  padding-bottom: 25px;
+}
+
+/*testimonials section*/
+
+.testimonial {
+  margin: 0 20px 40px;
+  /* max-height: 50vh; */
+}
+
+.dark .testimonial {
+  background: #a5a4a4;
+}
+
+.testimonial .testimonial-content {
+  padding: 35px 25px 35px 50px;
+  margin-bottom: 35px;
+  background: #f8f8f8;
+  border: 5px solid #f0f0f0;
+  position: relative;
+}
+.testimonial .testimonial-content:after {
+  content: "";
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  background: #f7f7f7;
+  border-bottom: 5px solid #f0f0f0;
+  border-right: 5px solid #f0f0f0;
+  position: absolute;
+  bottom: -20px;
+  left: 30px;
+  transform: rotate(45deg);
+}
+.testimonial-content .testimonial-icon {
+  width: 50px;
+  height: 45px;
+  background: #ff4242;
+  text-align: center;
+  font-size: 22px;
+  color: #fff;
+  line-height: 42px;
+  position: absolute;
+  top: 37px;
+  left: -19px;
+}
+.testimonial-content .testimonial-icon:before {
+  content: "";
+  border-bottom: 16px solid #e41212;
+  border-left: 18px solid transparent;
+  position: absolute;
+  top: -16px;
+  left: 1px;
+}
+.testimonial .description {
+  max-height: 160px;
+  overflow-y: scroll;
+  font-size: 16px;
+  font-style: italic;
+  color: #8a8a8a;
+  line-height: 23px;
+  margin: 0;
+}
+
+.testimonial .testimonial-details .carousel-img {
   width: 6em;
   height: 6em;
 }
 
-.testimonial-details{
+.testimonial-details {
   display: flex;
   align-items: center;
 }
 
-.testimonial .title{
-    display: block;
-    font-size: 18px;
-    font-weight: 700;
-    color: #525252;
-    text-transform: capitalize;
-    letter-spacing: 1px;
-    margin: 0 0 5px 0;
+.testimonial .title {
+  display: block;
+  font-size: 18px;
+  font-weight: 700;
+  color: #525252;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  margin: 0 0 5px 0;
 }
-.testimonial .post{
-    display: block;
-    font-size: 14px;
-    color: #ff4242;
+
+.dark .testimonial .title {
+  color: whitesmoke;
+}
+
+.testimonial .post {
+  display: block;
+  font-size: 14px;
+  color: #ff4242;
 }
 
 .testimonial-details a {
   font-size: 18px;
   display: inline-block;
-  background: #EC3134;
+  background: #ec3134;
   color: #eee;
   line-height: 1;
   padding: 10px 0;
@@ -130,17 +143,19 @@
   margin-top: 6px;
 }
 
-.testimonial-details .links{
+.testimonial-details .links {
   padding-left: 60px;
 }
 
-.testimonial-details a:hover, a:active, a:focus {
+.testimonial-details a:hover,
+a:active,
+a:focus {
   color: #000;
   outline: none;
   text-decoration: none;
 }
 
-.more{
+.more {
   display: flex;
   align-items: center;
   text-align: center;
@@ -148,30 +163,30 @@
   color: #e03a3c;
 }
 
-.batch{
+.batch {
   word-spacing: 3px;
   letter-spacing: 1px;
 }
 
-#home-testimonial-slider #more{
+#home-testimonial-slider #more {
   height: 50vh;
   display: flex;
   align-items: center;
 }
 
-.carousel-icon i{
+.carousel-icon i {
   color: #e03a3c;
   font-size: 30px;
 }
 
 #testimonials h4::after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   width: 50px;
   height: 2px;
   background: #e03a3c;
-  margin-top: 9px ;
+  margin-top: 9px;
   left: calc(50% - 25px);
 }
 
@@ -192,8 +207,9 @@
   float: right;
 }
 
-.animated-btn::before, .animated-btn::after {
-  content: '';
+.animated-btn::before,
+.animated-btn::after {
+  content: "";
   display: block;
   position: absolute;
   top: 0;
@@ -212,15 +228,14 @@
   animation-delay: 0.5s;
 }
 
-.owl-carousel .owl-buttons{
-    height: 47px;
-    position: absolute;
-    width: 100%;
-    top: 100px !important;
-    
+.owl-carousel .owl-buttons {
+  height: 47px;
+  position: absolute;
+  width: 100%;
+  top: 100px !important;
 }
 
-.owl-buttons .owl-prev{
+.owl-buttons .owl-prev {
   display: flex !important;
   justify-content: start;
   width: 26px;
@@ -232,7 +247,7 @@
   height: 26px;
 }
 
-.owl-buttons .owl-next{
+.owl-buttons .owl-next {
   display: flex !important;
   justify-content: end;
   width: 26px;
@@ -250,11 +265,11 @@
 
 .owl-buttons .owl-prev{
     /* background: url(nav-icon.png) no-repeat scroll 0 0; */
-    /* left: -33px;
+/* left: -33px;
 }
 .owl-buttons .owl-next{ */
-    /* background: url(nav-icon.png) no-repeat scroll -24px 0px; */
-    /* right: -33px;
+/* background: url(nav-icon.png) no-repeat scroll -24px 0px; */
+/* right: -33px;
 }
 .owl-carousel .prev-slide:hover{
    background-position: 0px -53px;
@@ -263,45 +278,43 @@
   background-position: -24px -53px;
 } */
 
-
 @keyframes ripple-1 {
   0% {
-      transform: scale(1);
-      opacity: 1;
+    transform: scale(1);
+    opacity: 1;
   }
 
   100% {
-      transform: scale(1.5);
-      opacity: 0;
+    transform: scale(1.5);
+    opacity: 0;
   }
 }
 
 @keyframes ripple-2 {
   0% {
-      transform: scale(1);
-      opacity: 1;
+    transform: scale(1);
+    opacity: 1;
   }
 
   100% {
-      transform: scale(1.7);
-      opacity: 0;
+    transform: scale(1.7);
+    opacity: 0;
   }
 }
 
-  
 .description::-webkit-scrollbar {
   width: 5px;
-background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 .description::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
-border-radius: 10px;
-background-color: #F5F5F5;
+  border-radius: 10px;
+  background-color: #f5f5f5;
 }
 
 .description::-webkit-scrollbar-thumb {
   border-radius: 10px;
--webkit-box-shadow: inset 0 0 6px rgba(255, 243, 243, 0.3);
-background-color: #D62929;
+  -webkit-box-shadow: inset 0 0 6px rgba(255, 243, 243, 0.3);
+  background-color: #d62929;
 }
