--- a/static/css/notice.css
+++ b/static/css/notice.css
@@ -3,64 +3,68 @@ Notice Starts
 */
 
 /* Notice Board */
-#notice .d-flex h2{
-    color: #333;
-    font-weight: bold;
-    font-family: "Roboto", sans-serif;
-    word-spacing: 10px;
-    letter-spacing: 2px;
-    line-height: 180%;
-    border-bottom:#e03a3c 5px solid
-  }
-
-  #notice .card h5{
-    font-family: 'Roboto', sans-serif;
-    font-size: 22px;
-    color: #16324f;
-    font-weight: 900;
-    line-height: 1;
-    display: block;
-  }
-
-  #notice .card p{
-    font-family: 'Poppins', sans-serif;
-    font-size: 17px;
-    line-height: 1.2em;
-    display: block;
-    color: #333;
-  }
-
-  #notice .card p>a{
-    font-family: 'Poppins', sans-serif;
-    font-size: 17px;
-    font-weight: 500;
-    display: block;
-    color: #e03a3c;
-  }
-
-  /*
-Notice Ends
-*/
-
-/* Notice Form starts */
-
-.notice-form .container{
-  border: 1px solid  #e9ecef;
-  border-radius: 20px;
-}
-
-#notice-form .d-flex h2{
+#notice .d-flex h2 {
   color: #333;
   font-weight: bold;
   font-family: "Roboto", sans-serif;
   word-spacing: 10px;
   letter-spacing: 2px;
   line-height: 180%;
-  border-bottom:#e03a3c 5px solid;
-  margin-bottom: 0%;
-  }
+  border-bottom: #e03a3c 5px solid;
+}
 
-#notice-form label{
+.dark #notice .d-flex h2 {
+  color: white;
+}
+
+#notice .card h5 {
+  font-family: "Roboto", sans-serif;
+  font-size: 22px;
+  color: #16324f;
+  font-weight: 900;
+  line-height: 1;
+  display: block;
+}
+
+#notice .card p {
+  font-family: "Poppins", sans-serif;
+  font-size: 17px;
+  line-height: 1.2em;
+  display: block;
+  color: #939393;
+}
+
+#notice .card p > a {
+  font-family: "Poppins", sans-serif;
+  font-size: 17px;
+  font-weight: 500;
+  display: block;
+  color: #e03a3c;
+}
+
+/*
+Notice Ends
+*/
+
+/* Notice Form starts */
+
+.notice-form .container {
+  border: 1px solid #e9ecef;
+  border-radius: 20px;
+}
+
+#notice-form .d-flex h2 {
+  color: #333;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+  word-spacing: 10px;
+  letter-spacing: 2px;
+  line-height: 180%;
+  border-bottom: #e03a3c 5px solid;
+  margin-bottom: 0%;
+}
+
+#notice-form label {
   margin-top: 15px;
   color: #e03a3c;
   font-style: italic;
@@ -68,23 +72,23 @@ Notice Ends
   letter-spacing: 2px;
 }
 
-.notice-form .form-control{
-  border-radius:1rem;
+.notice-form .form-control {
+  border-radius: 1rem;
 }
 
-.notice-form form{
+.notice-form form {
   padding-left: 2%;
   padding-right: 2%;
 }
 
-.notice-form .text-muted{
+.notice-form .text-muted {
   font-style: italic;
   font-size: 16px;
   margin-top: 0;
   display: inline;
 }
 
- /* .noticebtn {
+/* .noticebtn {
   height: 100%;
   border: none;
   border-radius: 1rem;
@@ -96,7 +100,7 @@ Notice Ends
   cursor: pointer;
 } */
 
-.noticebtn{
+.noticebtn {
   height: 28px;
   margin: 3px;
   border: none;
@@ -107,29 +111,28 @@ Notice Ends
   color: #fff;
   font-style: italic;
   cursor: pointer;
-  align-items: center; 
+  align-items: center;
 }
 
-#postbtn{
+#postbtn {
   width: 20%;
 }
 
-#writebtn{
+#writebtn {
   width: 100%;
 }
 
-#updatebtn{
+#updatebtn {
   width: 30%;
   background: grey;
 }
 
-#deletebtn{
+#deletebtn {
   width: 30%;
 }
 
-.noticebtn:hover{
-  background: crimson !important; 
+.noticebtn:hover {
+  background: crimson !important;
 }
-
 
 /* Notice Form ends */
