--- a/static/css/teams.css
+++ b/static/css/teams.css
@@ -67,6 +67,7 @@ section {
 
 .dark #accordionExample .card {
   background-color: #1b1b1b;
+  border: 0.1px solid whitesmoke;
 }
 
 /* --------------------------- */
