--- a/project/templates/project/project_list.html
+++ b/project/templates/project/project_list.html
@@ -17,8 +17,10 @@ Projects | Robotics Club MNNIT
                 <h2 class="">PROJECTS</h2>
             </div>
         </div>
-        <br>
         <div class="row">
+            <div class="col-12 mb-3">
+                <input type="text" id="projectSearch" class="form-control" placeholder="Search projects...">
+            </div>
             <!--start for-->
             {% for project in projects %}
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
